feat(gpt-runner-web): add switch model type support

--- a/packages/gpt-runner-web/client/public/locales/de.json
+++ b/packages/gpt-runner-web/client/public/locales/de.json
@@ -6,7 +6,7 @@
     "tab_files": "Dateien",
     "tab_settings": "Einstellungen",
     "tab_about": "Über",
-    "tab_file_editor": "Datei-Editor",
+    "tab_file_editor": "Editor",
     "continue_inputting_prompt": "Bitte weitermachen",
     "copy_btn": "Kopieren",
     "insert_btn": "Einfügen",
@@ -50,6 +50,8 @@
     "settings_tab_settings": "Einstellungen",
     "settings_tab_config_info": "Konfigurationsinformationen",
     "settings_tab_about": "Über",
+    "override_model_type": "Modelltyp überschreiben",
+    "default": "Standard",
     "override_settings": "Einstellungen überschreiben",
     "override_all_settings": "Alle Einstellungen überschreiben",
     "context_settings": "Kontext-Einstellungen",
@@ -83,6 +85,7 @@
     "for_example": "zum Beispiel",
     "proxy_url": "Proxy URL",
     "save_btn": "Speichern",
+    "do_not_save_btn": "Nicht speichern",
     "disabled_save_secrets_config_btn": "Sie können außerhalb von localhost nicht speichern",
     "toast_save_success": "Speichern erfolgreich!",
     "toast_save_error": "Speichern fehlgeschlagen!",
