--- a/packages/gpt-runner-web/client/public/locales/en.json
+++ b/packages/gpt-runner-web/client/public/locales/en.json
@@ -6,7 +6,7 @@
     "tab_files": "Files",
     "tab_settings": "Settings",
     "tab_about": "About",
-    "tab_file_editor": "File Editor",
+    "tab_file_editor": "Editor",
     "continue_inputting_prompt": "Please continue",
     "copy_btn": "Copy",
     "insert_btn": "Insert",
@@ -50,6 +50,8 @@
     "settings_tab_settings": "Settings",
     "settings_tab_config_info": "Config Info",
     "settings_tab_about": "About",
+    "override_model_type": "Override Model Type",
+    "default": "Default",
     "override_settings": "Override Settings",
     "override_all_settings": "Override All Settings",
     "context_settings": "Context Settings",
@@ -83,6 +85,7 @@
     "for_example": "For example",
     "proxy_url": "Proxy URL",
     "save_btn": "Save",
+    "do_not_save_btn": "Don't Save",
     "disabled_save_secrets_config_btn": "You can't save outside localhost",
     "toast_save_success": "Save success!",
     "toast_save_error": "Save error!",
