--- a/packages/gpt-runner-web/client/public/locales/ja.json
+++ b/packages/gpt-runner-web/client/public/locales/ja.json
@@ -6,7 +6,7 @@
     "tab_files": "ファイル",
     "tab_settings": "設定",
     "tab_about": "情報",
-    "tab_file_editor": "ファイルエディタ",
+    "tab_file_editor": "エディター",
     "continue_inputting_prompt": "続けてください",
     "copy_btn": "コピー",
     "insert_btn": "挿入",
@@ -50,6 +50,8 @@
     "settings_tab_settings": "設定",
     "settings_tab_config_info": "設定情報",
     "settings_tab_about": "情報",
+    "override_model_type": "モデルタイプを上書き",
+    "default": "デフォルト",
     "override_settings": "設定を上書き",
     "override_all_settings": "すべての設定を上書きする",
     "context_settings": "コンテキスト設定",
@@ -83,6 +85,7 @@
     "for_example": "例",
     "proxy_url": "プロキシ URL",
     "save_btn": "保存",
+    "do_not_save_btn": "保存しない",
     "disabled_save_secrets_config_btn": "localhost以外では保存できません",
     "toast_save_success": "保存しました！",
     "toast_save_error": "保存できませんでした！",
