--- a/packages/gpt-runner-web/client/public/locales/zh_Hant.json
+++ b/packages/gpt-runner-web/client/public/locales/zh_Hant.json
@@ -6,7 +6,7 @@
     "tab_files": "文件",
     "tab_settings": "設定",
     "tab_about": "關於",
-    "tab_file_editor": "文件編輯器",
+    "tab_file_editor": "編輯器",
     "continue_inputting_prompt": "請繼續",
     "copy_btn": "複製",
     "insert_btn": "插入",
@@ -50,6 +50,8 @@
     "settings_tab_settings": "設定",
     "settings_tab_config_info": "配置信息",
     "settings_tab_about": "關於",
+    "override_model_type": "覆蓋模型類型",
+    "default": "默認",
     "override_settings": "覆寫設置",
     "override_all_settings": "覆蓋所有設置",
     "context_settings": "上下文設置",
@@ -83,6 +85,7 @@
     "for_example": "例如",
     "proxy_url": "代理 URL",
     "save_btn": "保存",
+    "do_not_save_btn": "不保存",
     "disabled_save_secrets_config_btn": "無法在 localhost 以外保存",
     "toast_save_success": "保存成功！",
     "toast_save_error": "保存失敗！",
