--- a/packages/gpt-runner-web/client/public/locales/zh_CN.json
+++ b/packages/gpt-runner-web/client/public/locales/zh_CN.json
@@ -6,7 +6,7 @@
     "tab_files": "文件",
     "tab_settings": "设置",
     "tab_about": "关于",
-    "tab_file_editor": "文件编辑器",
+    "tab_file_editor": "编辑器",
     "continue_inputting_prompt": "请继续",
     "copy_btn": "复制",
     "insert_btn": "插入",
@@ -50,6 +50,8 @@
     "settings_tab_settings": "设置",
     "settings_tab_config_info": "配置信息",
     "settings_tab_about": "关于",
+    "override_model_type": "覆盖模型类型",
+    "default": "默认",
     "override_settings": "覆盖设置",
     "override_all_settings": "覆盖所有设置",
     "context_settings": "上下文设置",
@@ -83,6 +85,7 @@
     "for_example": "例如",
     "proxy_url": "代理 URL",
     "save_btn": "保存",
+    "do_not_save_btn": "不保存",
     "disabled_save_secrets_config_btn": "无法在 localhost 以外保存",
     "toast_save_success": "保存成功！",
     "toast_save_error": "保存失败！",
