--- a/packages/gpt-runner-web/client/public/locales/zh_Hant.json
+++ b/packages/gpt-runner-web/client/public/locales/zh_Hant.json
@@ -7,6 +7,7 @@
     "tab_settings": "設定",
     "tab_about": "關於",
     "tab_file_editor": "編輯器",
+    "file_empty_tips": "請選擇要編輯的檔案",
     "continue_inputting_prompt": "請繼續",
     "copy_btn": "複製",
     "insert_btn": "插入",
