--- a/packages/gpt-runner-web/client/public/locales/de.json
+++ b/packages/gpt-runner-web/client/public/locales/de.json
@@ -7,6 +7,7 @@
     "tab_settings": "Einstellungen",
     "tab_about": "Über",
     "tab_file_editor": "Editor",
+    "file_empty_tips": "Bitte wählen Sie eine Datei zum Bearbeiten aus",
     "continue_inputting_prompt": "Bitte weitermachen",
     "copy_btn": "Kopieren",
     "insert_btn": "Einfügen",
