--- a/packages/gpt-runner-web/client/public/locales/ja.json
+++ b/packages/gpt-runner-web/client/public/locales/ja.json
@@ -7,6 +7,7 @@
     "tab_settings": "設定",
     "tab_about": "情報",
     "tab_file_editor": "エディター",
+    "file_empty_tips": "編集するファイルを選択してください",
     "continue_inputting_prompt": "続けてください",
     "copy_btn": "コピー",
     "insert_btn": "挿入",
