--- a/packages/gpt-runner-web/client/public/locales/zh_CN.json
+++ b/packages/gpt-runner-web/client/public/locales/zh_CN.json
@@ -56,6 +56,7 @@
     "override_settings": "覆盖设置",
     "override_all_settings": "覆盖所有设置",
     "context_settings": "上下文设置",
+    "context_settings_system_prompt_as_user_prompt_tips": "将系统提示作为消息发送，对于不支持系统提示的 API 很有用",
     "context_settings_selected_text_checkbox_tips": "将选定的文本作为提示，<TokenNumWrapper>{{tokenNum}}</TokenNumWrapper> tokens",
     "context_settings_opening_ide_file_contents_checkbox_tips": "将 IDE 正在打开的文件内容作为提示，<FileNumWrapper>{{fileNum}}</FileNumWrapper> 个文件， <TokenNumWrapper>{{tokenNum}}</TokenNumWrapper> tokens",
     "context_settings_active_ide_file_contents_checkbox_tips": "将 IDE 正在编辑的文件内容作为提示，<TokenNumWrapper>{{tokenNum}}</TokenNumWrapper> tokens",
