--- a/packages/gpt-runner-web/client/public/locales/zh_Hant.json
+++ b/packages/gpt-runner-web/client/public/locales/zh_Hant.json
@@ -56,6 +56,7 @@
     "override_settings": "覆寫設置",
     "override_all_settings": "覆蓋所有設置",
     "context_settings": "上下文設置",
+    "context_settings_system_prompt_as_user_prompt_tips": "將系統提示作為訊息發送，對於不支援系統提示的 API 很有用",
     "context_settings_selected_text_checkbox_tips": "將選定的文本作為提示，<TokenNumWrapper>{{tokenNum}}</TokenNumWrapper> tokens",
     "context_settings_opening_ide_file_contents_checkbox_tips": "將 IDE 正在打開的文件內容作為提示，<FileNumWrapper>{{fileNum}}</FileNumWrapper> 個文件， <TokenNumWrapper>{{tokenNum}}</TokenNumWrapper> tokens",
     "context_settings_active_ide_file_contents_checkbox_tips": "將 IDE 正在編輯的文件內容作為提示，<TokenNumWrapper>{{tokenNum}}</TokenNumWrapper> tokens",
