feat(gpt-runner-web): optimize css styles

--- a/packages/gpt-runner-web/client/public/locales/de.json
+++ b/packages/gpt-runner-web/client/public/locales/de.json
@@ -51,6 +51,7 @@
     "settings_tab_settings": "Einstellungen",
     "settings_tab_config_info": "Konfigurationsinformationen",
     "settings_tab_about": "Über",
+    "settings_tab_notifications": "Benachrichtigungen",
     "override_model_type": "Modelltyp überschreiben",
     "default": "Standard",
     "override_settings": "Einstellungen überschreiben",
