--- a/packages/gpt-runner-web/client/public/locales/en.json
+++ b/packages/gpt-runner-web/client/public/locales/en.json
@@ -51,6 +51,7 @@
     "settings_tab_settings": "Settings",
     "settings_tab_config_info": "Config Info",
     "settings_tab_about": "About",
+    "settings_tab_notifications": "Notifications",
     "override_model_type": "Override Model Type",
     "default": "Default",
     "override_settings": "Override Settings",
