--- a/packages/gpt-runner-web/client/public/locales/zh_CN.json
+++ b/packages/gpt-runner-web/client/public/locales/zh_CN.json
@@ -51,6 +51,7 @@
     "settings_tab_settings": "设置",
     "settings_tab_config_info": "配置信息",
     "settings_tab_about": "关于",
+    "settings_tab_notifications": "通知",
     "override_model_type": "覆盖模型类型",
     "default": "默认",
     "override_settings": "覆盖设置",
