--- a/packages/gpt-runner-web/client/public/locales/zh_Hant.json
+++ b/packages/gpt-runner-web/client/public/locales/zh_Hant.json
@@ -51,6 +51,7 @@
     "settings_tab_settings": "設定",
     "settings_tab_config_info": "配置信息",
     "settings_tab_about": "關於",
+    "settings_tab_notifications": "通知",
     "override_model_type": "覆蓋模型類型",
     "default": "默認",
     "override_settings": "覆寫設置",
