--- a/packages/gpt-runner-web/client/public/locales/ja.json
+++ b/packages/gpt-runner-web/client/public/locales/ja.json
@@ -51,6 +51,7 @@
     "settings_tab_settings": "設定",
     "settings_tab_config_info": "設定情報",
     "settings_tab_about": "情報",
+    "settings_tab_notifications": "通知",
     "override_model_type": "モデルタイプを上書き",
     "default": "デフォルト",
     "override_settings": "設定を上書き",
